--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       </article>
 
                       <article class="projects__card">
-                          <img src="./assets/img/img2.jpg" alt="" class="projects__img">
+                          <img src="./assets/img/thl.jpg" alt="" class="projects__img">
 
                           <div class="projects__modal">
                               <div>
@@ -147,7 +147,7 @@
                       </article>
 
                       <article class="projects__card">
-                          <img src="./assets/img/img3.jpg" alt="" class="projects__img">
+                          <img src="./assets/img/thl.jpg" alt="" class="projects__img">
 
                           <div class="projects__modal">
                               <div>
@@ -161,7 +161,7 @@
                       </article>
 
                       <article class="projects__card">
-                          <img src="./assets/img/img4.jpg" alt="" class="projects__img">
+                          <img src="./assets/img/thl.jpg" alt="" class="projects__img">
 
                           <div class="projects__modal">
                               <div>
